2009-07-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/tst-xmmymm.sh: Refine testing.  The script now
	determines which files are used in runtime lookups and only checks
	those for SSE use.
	* sysdeps/x86_64/rtld-memchr.c: Removed.  Not needed with refined
	testing.
	* sysdeps/x86_64/rtld-rawmemchr.c: Removed.
	* sysdeps/x86_64/multiarch/rtld-rawmemchr.c: Removed
	* sysdeps/x86_64/Makefile: Emit warning that tst-xmmymm.sh might
	take a while.

	* elf/dl-open.c: Move _dl_scope_free to...
	* elf/dl-scope.c: ...here.  New file.
	* elf/Makefile (dl-routines): Add scope.

	* resolv/resolv.h (RES_USE_DNSSEC): Define.
	* resolv/res_debug.c (p_option): Handle RES_USE_EDNS0 and
	RES_USE_DNSSEC.
	* resolv/res_mkquery.c (__res_nopt): Set flags for RES_USE_DNSSEC.
	* resolv/res_query.c (__libc_res_nquery): Handle RES_USE_DNSSEC in
	all the places we handled RES_USE_EDNS0 only before.
	Patch by Adam Tkac <atkac@redhat.com>.

2009-07-27  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-lookup.c (do_lookup_x): Fix check for table more than
	3/4 full.  Pass size + 1 rather than size to _dl_higher_prime_number.
	Update size when reallocating.

2009-07-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/tst-xmmymm.sh: New file.  Check whether any of the
	functions used in ld.so modify xmm/ymm registers.
	* sysdeps/x86_64/Makefile:  Hook new test up.
	* sysdeps/x86_64/rtld-memchr.c: New file.
	* sysdeps/x86_64/rtld-memcmp.c: New file.
	* sysdeps/x86_64/rtld-rawmemchr.c: New file.
	* sysdeps/x86_64/rtld-strchr.S: New file.
	* sysdeps/x86_64/rtld-strlen.S: New file.
	* sysdeps/x86_64/multiarch/rtld-rawmemchr.c: New file.
	* sysdeps/x86_64/multiarch/rtld-strlen.S: New file.

2009-07-26  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Remove
	strncmp-c.
	* sysdeps/x86_64/multiarch/strcmp.S (aftertail): Removed.
	(exit): Likewise.
	(Byte1): Likewise.
	(Byte2): Likewise.
	(Byte3): Likewise.
	(Byte4): Likewise.
	(Byte5): Likewise.